# rust-spa

./: Cargo.toml  Makefile.toml  README.md
src/: api.rs  app.rs  lib.rs  route.rs  types.rs
src/components/: atc_button.rs  navbar.rs  product_card.rs
src/pages/: home.rs  product_detail.rs
static/: README.md  index.html  package.json  styles.css  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
static/products/: products.json
