[package]
name = "rust-spa"
version = "0.1.0"
authors = ["davechai <davecqx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2"
anyhow = "1.0.32"
serde = { version = "1.0", features = ["derive"] }